# image_search_with_machine_learning

./: .gitignore  README.md  classify.py  detect.py  frontend.py  inference.py  pyproject.toml  requirements.txt
test/: test_inference.py
